--- a/portfolio.css
+++ b/portfolio.css
@@ -246,7 +246,5 @@ tr.hidden {
 }
  /* Override Global fa  */
 .fa {
-  font-family: 'Montserrat' !important; 
-  font-weight: 600 !important; 
-  font-size: 16px !important;
+  color: #E07E27;
 }
